# outliers

./: .gitignore  LICENSE  README.md  outliers.py  pyproject.toml
examples/: README.md  basic_usage.py
src/: outlier_utils.py
src/outliers/: __init__.py
tests/: conftest.py  test_outlier_utils.py
