[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outliers"
version = "0.1.0"
description = "Outlier detection helpers using a robust modified z-score."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Outliers Maintainers"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://example.com/outliers"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
